--- a/modern-auto.css
+++ b/modern-auto.css
@@ -1,6 +1,7 @@
 /* Modern UI Theme 1.2 */
 
-@import url("litely.css");
+@import url("litely.css") (prefers-color-scheme: light);
+@import url("darkly.css") (prefers-color-scheme: dark);
 
 .card, .container-lg .row .col-12.col-lg-6.offset-lg-3.mb-4:first-child, .container-lg .row .post article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, .post .container-lg .row article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, #community_table, main .search, div.col-12.col-md-8.mb-3 > div:not([class]):last-child, .post .post-listing:first-child, main[role=main],
 .community .post-listings,
@@ -160,6 +161,9 @@ form[id^=comment-form-] .btn-secondary:nth-child(2):not(:hover), form[id^=commen
   padding-bottom: 0;
 }
 
+
+@media (prefers-color-scheme: light)
+{
 :root {
   --custom-primary: #ce4500;
   --custom-secondary: #007d34;
@@ -210,4 +214,59 @@ blockquote {
 
 .text-info {
   color: var(--custom-info) !important;
+}
+
+}
+
+@media (prefers-color-scheme: dark)
+{
+:root {
+  --custom-primary: #49ce9d;
+  --custom-primary-light: #4fdda9;
+  --custom-primary-dark: #38a57d;
+  --custom-secondary-light: rgb(54, 54, 54);
+  --custom-tabs-color: rgb(49, 49, 49);
+  --custom-tabs-text-color: #dee2e6;
+  --custom-bg-color: #222;
+  --custom-main-bg-color: #171717;
+  --custom-comment-left-border: rgba(255, 255, 255, 0.1);
+  --bs-warning-text-emphasis: #fff;
+  --bs-warning-bg-subtle: #44423f;
+  --bs-warning-border-subtle: #44423f;
+  --bs-info-text-emphasis: #fff;
+  --bs-info-bg-subtle: #2f3235;
+  --bs-info-border-subtle: #2f3235;
+  --bs-body-bg: var(--custom-main-bg-color);
+  --bs-code-color: #ff9fcf;
+}
+
+a:not(.btn):not(:disabled):hover {
+  color: var(--custom-primary-light);
+}
+a:not(.btn):not(:disabled):hover.text-primary {
+  color: var(--custom-primary-light) !important;
+}
+
+.btn-secondary:not(:hover) {
+  background-color: var(--custom-tabs-color);
+  border-color: var(--custom-tabs-color);
+}
+.btn-secondary:not(:disabled):hover {
+  background-color: var(--custom-secondary-light) !important;
+  border-color: var(--custom-secondary-light);
+}
+
+.primary:not(:disabled), .badge-primary:not(:disabled), .btn-primary:not(:disabled), .text-bg-primary:not(:disabled) {
+  background-color: var(--custom-primary-dark) !important;
+  border-color: var(--custom-primary-dark);
+}
+
+.form-control {
+  background-color: var(--custom-main-bg-color);
+  border-color: #403e3e;
+}
+.form-control:focus {
+  background-color: var(--custom-main-bg-color);
+}
+
 }
