--- a/modern-dark.css
+++ b/modern-dark.css
@@ -1,12 +1,15 @@
-/*   IMPORT BASE THEME (darkly.css)   */
+/* Modern UI Theme 1.2 */
+
 @import url("darkly.css");
 
-/*   COMMON CONFIG (common.css)   */
 .card, .container-lg .row .col-12.col-lg-6.offset-lg-3.mb-4:first-child, .container-lg .row .post article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, .post .container-lg .row article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, #community_table, main .search, div.col-12.col-md-8.mb-3 > div:not([class]):last-child, .post .post-listing:first-child, main[role=main],
 .community .post-listings,
 .col-12.col-md-8:not(.mb-3),
 .person-details,
-.col-12.col-md-8.mb-3 > .post-listing:first-child {
+.col-12.col-md-8.mb-3 > .post-listing:first-child,
+.modlog,
+.home-instances,
+.communities {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -56,6 +59,10 @@
 
 .p-2, .container-lg .row .col-12.col-lg-6.offset-lg-3.mb-4:first-child, .container-lg .row .post article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, .post .container-lg .row article.col-12.col-lg-6.offset-lg-3[id^=comment-].py-2:first-child, div.col-12.col-md-8.mb-3 > div:not([class]):last-child {
   padding: 0.5rem !important;
+}
+
+.pt-2, .modlog, .home-instances {
+  padding-top: 0.5rem !important;
 }
 
 body {
@@ -123,12 +130,14 @@ aside .btn-secondary:not(:hover) {
   background-color: transparent !important;
 }
 
-.comments .comment.ml-1 div[id^=comment-] {
+div[id^=comment-], article[id^=comment-] {
   border-left-color: var(--custom-comment-left-border) !important;
+  border-top-color: transparent !important;
 }
 
 ul.comments.border-top {
   border-left-color: var(--custom-comment-left-border) !important;
+  border-top-color: transparent !important;
 }
 .person-details ul.comments {
   border-left-color: transparent !important;
@@ -145,38 +154,57 @@ form[id^=comment-form-] .btn-secondary:nth-child(2):not(:hover), form[id^=commen
   background-color: transparent !important;
 }
 
-/*   DARK THEME (dark.css)  */
+.card-header {
+  background-color: transparent;
+  border-bottom: none;
+  padding-bottom: 0;
+}
 
 :root {
---custom-primary: #49ce9d;
---custom-primary-light: #4fdda9;
---custom-primary-dark: #38a57d;
---custom-secondary-light: rgb(54, 54, 54);
---custom-tabs-color: rgb(49, 49, 49);
---custom-tabs-text-color: #dee2e6;
---custom-bg-color: #222;
---custom-main-bg-color: #171717;
---custom-comment-left-border: rgba(255, 255, 255, 0.1);
+  --custom-primary: #49ce9d;
+  --custom-primary-light: #4fdda9;
+  --custom-primary-dark: #38a57d;
+  --custom-secondary-light: rgb(54, 54, 54);
+  --custom-tabs-color: rgb(49, 49, 49);
+  --custom-tabs-text-color: #dee2e6;
+  --custom-bg-color: #222;
+  --custom-main-bg-color: #171717;
+  --custom-comment-left-border: rgba(255, 255, 255, 0.1);
+  --bs-warning-text-emphasis: #fff;
+  --bs-warning-bg-subtle: #44423f;
+  --bs-warning-border-subtle: #44423f;
+  --bs-info-text-emphasis: #fff;
+  --bs-info-bg-subtle: #2f3235;
+  --bs-info-border-subtle: #2f3235;
+  --bs-body-bg: var(--custom-main-bg-color);
+  --bs-code-color: #ff9fcf;
 }
 
 a:not(.btn):not(:disabled):hover {
-color: var(--custom-primary-light);
+  color: var(--custom-primary-light);
 }
 a:not(.btn):not(:disabled):hover.text-primary {
-color: var(--custom-primary-light) !important;
+  color: var(--custom-primary-light) !important;
 }
 
 .btn-secondary:not(:hover) {
-background-color: var(--custom-tabs-color);
-border-color: var(--custom-tabs-color);
+  background-color: var(--custom-tabs-color);
+  border-color: var(--custom-tabs-color);
 }
 .btn-secondary:not(:disabled):hover {
-background-color: var(--custom-secondary-light) !important;
-border-color: var(--custom-secondary-light);
+  background-color: var(--custom-secondary-light) !important;
+  border-color: var(--custom-secondary-light);
 }
 
 .primary:not(:disabled), .badge-primary:not(:disabled), .btn-primary:not(:disabled), .text-bg-primary:not(:disabled) {
-background-color: var(--custom-primary-dark) !important;
-border-color: var(--custom-primary-dark);
+  background-color: var(--custom-primary-dark) !important;
+  border-color: var(--custom-primary-dark);
 }
-  
+
+.form-control {
+  background-color: var(--custom-main-bg-color);
+  border-color: #403e3e;
+}
+.form-control:focus {
+  background-color: var(--custom-main-bg-color);
+}
